# natrukiSVG

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_and_run.sh  commits.txt  et --hard HEAD@{0}  git_log.txt  q  test_build.sh
.backup_merge/: CanvasWidget.h.bak
.cache/clangd/index/: NodeVisitor.h.98AA6EF6A674C159.idx  SVGCircle.cpp.44F5438B02799611.idx  SVGCircle.h.539CD213C2CAD0C0.idx  SVGDocument.cpp.C131D733E92D39E9.idx  SVGElement.cpp.AAD63EF32B1E8E80.idx  SVGElement.h.4F6B3D03BAB33E33.idx  SVGEllipse.cpp.A68C7274B979C74E.idx  SVGEllipse.h.9A0195764898CDA5.idx  SVGFactory.cpp.84A3C19FD23753B2.idx  SVGFactory.h.5CE5425E767634CE.idx  SVGFactoryImpl.cpp.36BE6E66041B10A6.idx  SVGFactoryImpl.h.5727D6B764B2AF7F.idx  SVGGroup.cpp.B226C7DB735AAB04.idx  SVGGroup.h.E242D5E65264B51C.idx  SVGLine.cpp.15707703FED7D6DC.idx  SVGLine.h.1FA313AB12AD1FCE.idx  SVGPolygon.cpp.B86D06D274FBFCA3.idx  SVGPolygon.h.08A3496EA8668255.idx  SVGPolyline.cpp.6F61A349521450AA.idx  SVGPolyline.h.D48B8A04AD009DCC.idx  SVGRect.cpp.845B78009C92C058.idx  SVGRect.h.F081301739482829.idx  SVGStyle.cpp.4E35BD657DC292B0.idx  SVGStyle.h.95562842E9A4703D.idx  SVGText.cpp.BE462BB5C7E53D29.idx  SVGText.h.687A15D328758282.idx  SVGTransform.cpp.2481D608774CBF94.idx  SVGTransform.h.F838675DE394990E.idx  Types.h.7D92CC0AF2261E10.idx  main.cpp.F73E17523F3C434E.idx  rapidxml.hpp.1944368138DF9EE2.idx
.other/report/v2/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.toc  refs.bib
.other/report/v2/sections/: introduction.aux  introduction.tex  title.tex
.other/report/v3/: main.bbl  main.tex  refs.bib
.other/report/v3/sections/: gradient_uml.tex  introduction.aux  introduction.tex
apps/: mainwindow.ui
docs/: svg_subset_v1.md  trash.md
include/svg/: NodeVisitor.h  SVGCircle.h  SVGDocument.h  SVGElement.h  SVGEllipse.h  SVGFactory.h  SVGFactoryImpl.h  SVGGradient.h  SVGGroup.h  SVGLine.h  SVGPath.h  SVGPolygon.h  SVGPolyline.h  SVGRect.h  SVGStyle.h  SVGText.h  SVGTransform.h  Types.h
include/ui/: CanvasWidget.h  MainWindow.h  QtRenderer.h  Renderer.h  mainwindow.h
resources/: resources.qrc
src/: main.cpp
src/svg/: CMakeLists.txt  SVGCircle.cpp  SVGDocument.cpp  SVGElement.cpp  SVGEllipse.cpp  SVGFactory.cpp  SVGFactoryImpl.cpp  SVGGradient.cpp  SVGGroup.cpp  SVGLine.cpp  SVGPath.cpp  SVGPolygon.cpp  SVGPolyline.cpp  SVGRect.cpp  SVGStyle.cpp  SVGText.cpp  SVGTransform.cpp
src/ui/: CMakeLists.txt  CanvasWidget.cpp  QtRenderer.cpp  Renderer.cpp  main.cpp  mainwindow.cpp
